Bug 3298 - NFS privport handling is broken
Summary: NFS privport handling is broken
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: 3.0-CURRENT
Hardware: Any Any
: Normal Affects Only Me
Assignee: freebsd-bugs (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 1997-04-15 18:30 UTC by Tor Egge
Modified: 1997-04-30 10:52 UTC (History)
0 users

See Also:


Attachments
file.diff (613 bytes, patch)
1997-04-15 18:30 UTC, Tor Egge
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tor Egge 1997-04-15 18:30:01 UTC
	Some (older) versions of amd or automount, and some versions
	of mount use unprivileged ports when checking for the availability
	of nfsd on the NFS server. 

	[On the SunOS 5.4 client]
	staude# mount ikke:/export/akg2/store /mnt
	nfs mount: ikke: NFS service not responding
	nfs mount: retrying: /mnt

	[On the FreeBSD 3.0-CURRENT NFS server]
	Apr 15 17:17:17 ikke /kernel: NFS request from unprivileged port (129.241.111.23

Fix: As a special case, allow the NFS NULL procedure even when the client
	port is not privileged.
Comment 1 dfr freebsd_committer freebsd_triage 1997-04-30 10:51:50 UTC
State Changed
From-To: open->closed

Fixed in rev 1.22 of nfs_syscalls.c.