Allow NULL rpcs on non-privileged ports at all times to work around broken clients.

PR:		kern/3298
Submitted by:	Tor Egge <Tor.Egge@idi.ntnu.no>